# fortran-linter

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  MANIFEST.in  Readme  Readme.md  cleanup.py  flycheck-fortran-linter.el  fortran-linter.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-test.yaml
fortran_linter/: __init__.py  cli.py  main.py
tests/: test.f90  test_comment_detection.py  test_fixing.py  test_reference.f90
