[build-system]
requires = [
  "setuptools>=19.6",
  "wheel",
]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = ["fortran_linter"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = []
target-version = 'py310'
