[metadata]
name = fortran_linter
version = 1.0.9
author = Corentin Cadiou
author_email = corentin.cadiou@iap.fr
license = GPL
description = A linter for Fortran files
long_description = file: Readme.md LICENSE
keywords = fortran
url = https://github.com/cphyc/fortran-linter
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Fortran
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Topic :: Software Development :: Build Tools

[options]
packages = fortran_linter
setup_requires = wheel
include_package_data = True

[options.entry_points]
console_scripts = fortran-linter = fortran_linter.cli:main

[options.package_data]
fortran_linter = Readme.md; LICENSE


[flake8]
max-line-length=88
ignore = E203, # Whitespace before ':' (black compatibility)
         E266, # Too many leading '#' for block comment
         E302, # Expected 2 blank lines, found 0
         E501, # Line too long (let Black deal with line-lenght)
         E741, # Do not use variables named 'I', 'O', or 'l'
         W503, # Line break occurred before a binary operator (black compatibility)

jobs=8
