[metadata]
name = fortran_linter
version = 1.0.10
description = A linter for Fortran files
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/cphyc/fortran-linter
author = Corentin Cadiou
author_email = corentin.cadiou@iap.fr
license = GPL
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Fortran
    Topic :: Software Development :: Build Tools
keywords = fortran

[options]
packages = fortran_linter
include_package_data = True
setup_requires =
    wheel

[options.entry_points]
console_scripts = fortran-linter = fortran_linter.cli:main

[options.package_data]
fortran_linter = Readme.md; LICENSE

[flake8]
max-line-length = 88
ignore = E203, # Whitespace before ':' (black compatibility)
    E266, # Too many leading '#' for block comment
    E302, # Expected 2 blank lines, found 0
    E501, # Line too long (let Black deal with line-lenght)
    E741, # Do not use variables named 'I', 'O', or 'l'
    W503, # Line break occurred before a binary operator (black compatibility)
jobs = 8
